[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/scientist/Scientist.gd" type="Script" id=1]
[ext_resource path="res://assets/Scientist_Alt.png" type="Texture" id=2]
[ext_resource path="res://sounds/explosion/explosion.tres" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3, 6 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.750916, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.572549, 0.631373, 0.72549, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[node name="Scientist" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 7 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 7 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 2 )
emitting = false
amount = 32
lifetime = 0.65
explosiveness = 0.6
process_material = SubResource( 9 )

[node name="FadeTween" type="Tween" parent="."]

[node name="ExplosionAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ActionvationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ActionvationTimer" to="." method="_on_ActionvationTimer_timeout"]
